src/app/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    p {
        @apply text-graphite font-base;
    }
    body {
        @apply overflow-y-scroll;
    }
}

@layer base {
    @font-face {
        font-family: "Circe-Regular";
        src: url("./app/fonts/Circe-Regular.ttf") format("truetype");
        font-weight: normal;
        font-style: normal;
    }
    @font-face {
        font-family: "Circe-ExtraBold";
        src: url("./app/fonts/Circe-ExtraBold.ttf") format("truetype");
        font-weight: normal;
        font-style: normal;
    }
}

